# strahl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  NOTICE.md  README.md  classes.pu  components.pu  katex-header.html  main.cc  rust-toolchain.toml  rustfmt.toml
ObjectAlgebras/: Algebras.hs  algebra-exprs.cc
abstractions/: CMakeLists.txt  Cargo.toml  abstractions.rs  backend.hpp  collision-context.hpp  common.hpp  dummy.cc  factory.hpp  material.hpp
abstractions/scene/: light-source.cc  node.hpp  plane.hpp  scene.hpp  sphere.hpp
backend/cpu/: CMakeLists.txt  cpu-raytracer.cc  geometry.cc  material.cc  nodes.cc  scene.cc  solver.cc
backend/cpu-raymarcher/: CMakeLists.txt  ray.cc  raymarcher.cc  rm-scene.cc  term-colors.hpp
backend/cpu-raymarcher/include/: abstractor.hpp  ray.hpp  raymarcher.hpp  rm-scene.hpp
backend/cpu/bsdf/: lambertian.cc
backend/cpu/include/: cpu-raytracer.hpp  dist-samplers.hpp  geometry.hpp  integrator.hpp  lighting.hpp  material.hpp  nodes.hpp  path.hpp  scene.hpp  solver.hpp  spectrum.hpp
backend/cpu/include/bsdf/: bxdf.hpp  lambertian.hpp
backend/cpu/include/detail/: ray.hpp
backend/rasterizer/: Cargo.toml  Makefile  build.rs  renderdoc.c  renderdoc.cc
backend/rasterizer/shaders/: blur.slang  blur.wgsl  globals.slang  hdr.slang  hdr.wgsl  raster-pipeline.slang  raster-pipeline.wgsl  skybox.slang  skybox.wgsl  test.glsl  tonemapping.slang
backend/rasterizer/src/: geometry.rs  gpu_alloc.rs  lib.rs  loader.rs  main.rs  material.rs  postprocessing.rs  presenter.rs  scene.rs  shader_manager.rs  skybox.rs  uniform.rs
backend/rasterizer/src/limne/: blur.rs  mod.rs  show-texture.wgsl  show_texture.rs  texture_provider.rs
backend/rcpu/: Cargo.toml  light-paths.csv  out.tiff  suzanne.glb  test-scene.toml
backend/rcpu/src/: camera.rs  geometry.rs  lib.rs  light.rs  main.rs  points.rs  sampling.rs  scene_loader.rs  scenedes.rs  solver.rs
backend/rcpu/src/geometry/: mesh.rs
backend/rcpu/src/material/: medium.rs  mod.rs
backend/rcpu/src/material/bsdf/: dielectric.rs  lambertian.rs  mod.rs  specular.rs
backend/rcpu/src/solver/: bdpt.rs  mod.rs  solver2.rs
backend/rcpu/src/test/: geometry.rs
backend/system_tests/povray/: scene1_diffuse.pov  scene2_mirror.pov  scene4_cornell.pov
backend/system_tests/strahl/: scene1_diffuse.toml  scene2_mirror.toml  scene4_cornell.toml  scene5_bunny.toml
backend/vulkan/: CMakeLists.txt  strahl-vulkan.cc  test.slang  vk-renderer.cc
backend/vulkan/cmake/: slang.cmake
backend/vulkan/include/: strahl-vulkan.hpp  vk-renderer.hpp  vk-scene.hpp
backend/vulkan/private/: alloc.cc  alloc.hpp  device-queue.hpp  gpu-vector.hpp  queue-helper.hpp  shader-loader.cc  shader-loader.hpp
backend/wgpu-rt/: Cargo.toml
docker/: qt-webasm.dockerfile
electrotest/: index.html  index.js  package-lock.json  package.json  preload.js  renderer.js
frontends/cli/: main.cc
frontends/qt-gui/: CMakeLists.txt  main.cc
napi-test/: .gitattributes  Cargo.toml  hell.ts  index.d.ts  index.js  package-lock.json  package.json
napi-test/src/: framebuffer.rs  gpu_alloc.rs  lib.rs  texture_infos.rs
node/: Cargo.toml
node/src/: lib.rs
strahl-import/: .gitignore  Cargo.toml  README.md
strahl-import/src/: builder.rs  lib.rs  main.rs  material_textures.rs  per_texture.rs  reader.rs
strahl-js/: .gitattributes  Cargo.toml  index.d.ts  index.js  package.json
strahl-js/src/: erase.rs  lib.rs
strahl_types/: Cargo.toml
strahl_types/src/: lib.rs
