
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "napi_test"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
ash = "0.38.0"
napi = {version="3.0.0",features = ["async"]}
napi-derive = "3.0.0"
node = {path = "../node"}
wgpu = "29.0.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"

[features]
default = ["node"]
node = []
