[package]
name = "strahl-import"
version = "0.1.0"
edition = "2024"

[dependencies]
ktx2-rw = "0.2.4"
zip = "8.5.1"
image = {workspace = true}
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
clap = { version = "4.6.0", features = ["derive"] }

[features]
default = []
converter = []
