[package]
name = "strahl-import"
version = "0.2.0"
edition = "2024"

[dependencies]
zip = "8.5.1"
image = {workspace = true}
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
clap = { version = "4.6.0", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.9"
gltf = "1.4.1"

[features]
default = []
converter = []
