[package]
authors = ["Nikita Moskaliov <moscalnk@gmail.com>"]
edition = "2024"
name = "strahl-js"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
glam = "0.32.1"
log = "0.4.29"
napi = { version = "3.5.2", features = ["async"] }
napi-derive = "3.5.2"
rasterizer = { path = "../backend/rasterizer" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
