[package]
name = "rasterizer"
version = "0.3.0"
edition = "2024"

[dependencies]
log = "0.4.29"
wgpu = { version = "29.0.1", features = [
    "vulkan",
    "std",
    "parking_lot",
    "wgsl",
], default-features = false }
strahl_types = { path = "../../strahl_types" }
ash = "0.38.0"
anyhow = "1.0.102"
glam = { version = "0.32.1", features = ["zerocopy"] }
strahl-import = { version = "0.1.0", path = "../../strahl-import" }
zerocopy = { version = "0.8.48", features = ["derive"] }
env_logger = "0.11.9"
tokio = { version = "1.51.1", features = ["rt"] }
image = { workspace = true }

[features]
default = []
renderdoc = []

[build-dependencies]
cc = "1.2.22"
